# python-cmethods

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMethods.py  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TestUfunc.ipynb  do_bias_correction.py  examples.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run_pylint.sh  setup.py  test.ipynb
.github/: CITATION  CODEOWNERS  codecov.yml  dependabot.yaml  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _build.yaml  _build.yml  _build_doc.yaml  _build_doc.yml  _codecov.yaml  _codecov.yml  _codeql.yaml  _codeql.yml  _pre_commit.yaml  _pre_commit.yml  _pypi_publish.yaml  _pypi_publish.yml  _pypi_test_publish.yaml  _test.yaml  _test.yml  cicd.yaml  cicd.yml  codecov.yml  codeql.yaml  codeql.yml  dependabot_auto_approve.yaml  pre-commit.yml  python-package.yml  release.yml  scorecard.yml
cmethods/: CMethods.py  __init__.py  __version__.py  core.py  distribution.py  requirements.py  requirements.txt  scaling.py  static.py  types.py  utils.py
cmethods/tests/: testing.py
doc/: Makefile  cli.rst  cmethods.rst  conf.py  getting_started.rst  index.rst  introduction.rst  issues.rst  license.rst  links.rst  methods.rst  requirements.txt
doc/src/: cmethods.rst  getting_started.rst  introduction.rst  issues.rst  methods.rst
docs/: conf.py  index.rst  links.rst  requirements.txt
docs/src/: cmethods.rst  getting_started.rst  introduction.rst  issues.rst  license.rst  methods.rst
examples/: biasadjust.py  do_bias_correction.py  examples.ipynb  private.test.ipynb  requirements.txt  test.ipynb
hooks/: pre-commit
input_data/: contr.nc  obs.nc  scen.nc
tests/: README.rst  __init__.py  conftest.py  helper.py  requirements.txt  test_cli.py  test_dask_computation.py  test_methods.py  test_methods_different_input_shape.py  test_misc.py  test_utils.py  test_zarr_dask_compatibility.py
tests/fixture/precipitation_obsh.zarr/: .zmetadata
tests/fixture/precipitation_obsh.zarr/pr/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/precipitation_obsh.zarr/time/: .zattrs
tests/fixture/precipitation_obsp.zarr/pr/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/precipitation_obsp.zarr/time/: 0
tests/fixture/precipitation_simh.zarr/lon/: 0
tests/fixture/precipitation_simh.zarr/pr/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/precipitation_simp.zarr/: .zmetadata
tests/fixture/precipitation_simp.zarr/lat/: 0
tests/fixture/precipitation_simp.zarr/pr/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/temperature_obsh.zarr/tas/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/temperature_obsp.zarr/: .zmetadata
tests/fixture/temperature_obsp.zarr/tas/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/temperature_obsp.zarr/time/: .zarray
tests/fixture/temperature_simh.zarr/tas/: .zarray  0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/temperature_simp.zarr/: .zmetadata
tests/fixture/temperature_simp.zarr/tas/: 0.0.0  0.1.0  1.0.0  1.1.0
tests/fixture/temperature_simp.zarr/time/: .zattrs
